--- a/html/pages/userresume/templates/layout.html
+++ b/html/pages/userresume/templates/layout.html
@@ -33,7 +33,7 @@
 	</div>
 <!-- User Reference Section Ends -->
 
-<!-- User Contacts Section Starts -->
+<!-- User Contacts Section Starts
 	<div id="section-contacts">
 		
 	</div>
