--- a/html/pages/userresume/templates/references.html
+++ b/html/pages/userresume/templates/references.html
@@ -3,42 +3,48 @@
 		<span class="green-left-heading">References</span>
 	</div>
 
-	<div class="section-new-reference">
+	<div class="inset-data-entry section-new-reference">
 		<div class="div-add-dotted well-small btn-Add-reference_h" testids="{{TestIds}}">
 			+ Add an Reference
 		</div>
 		<div class="well section-new-controls displayNone">
 			<div class="clearfix row-fluid">
-				<span class="span2">Sports :</span>
-				<span class="span3"> <select class="ddl-sports-references_h"></select> </span>
-				<span class="span2">Name :</span>
-				<span class="span3">
+				<span class="reference-labels">Sport:</span>
+				<span class=""> <select class="ddl-sports-references_h"></select> </span>
+			</div>
+			<div class="clearfix row-fluid">
+				<span class="reference-labels">Name:</span>
+				<span class="">
 					<input type="text" class="txtReferences_h txt_name_h" value="{{name}}"/>
 				</span>
 			</div>
 
 			<div class="clearfix row-fluid">
-				<span class="span2">Description :</span>
-				<span class="span3">
+				<span class="reference-labels">Description:</span>
+				<span class="">
 					<input type="text" class="txtReferences_h txt_description_h" value="{{description}}"/>
 				</span>
-				<span class="span2">Email Id :</span>
-				<span class="span3">
+			</div>
+			<div class="clearfix row-fluid">
+				<span class="reference-labels">Email:</span>
+				<span class="">
 					<input type="text" class="txtReferences_h txt_email_h" value="{{year}}"/>
 				</span>
 			</div>
 			<div class="clearfix row-fluid">
-				<span class="span2">Phone :</span>
-				<span class="span3">
-					<input type="text" class="txtReferences_h txt_phone_h" value="{{description}}"/>
-				</span>
-				<span class="span2">Relation :</span>
-				<span class="span3">
+				<span class="reference-labels">Relationship:</span>
+				<span class="">
 					<input type="text" class="txtReferences_h txt_relation_h" value="{{year}}"/>
 				</span>
 			</div>
 			<div class="clearfix row-fluid">
-				<span class="span12"> <a href="javascript:void(0)" class="btn btn-primary btn-Save_reference_h" >Save</a> <a href="javascript:void(0)" class="btn btn-Cancel-New">Cancel</a> <span class="alert alert-danger displayNone error_h"></span> <span class="alert alert-success displayNone success_h"></span>
+				<span class="reference-labels">Phone:</span>
+				<span class="">
+					<input type="text" class="txtReferences_h txt_phone_h" value="{{description}}"/>
+				</span>
+			</div>
+			<div class="clearfix row-fluid">
+				<span class="span12"> <a href="javascript:void(0)" class="resume_button btn-Save_reference_h" >Save</a> <a href="javascript:void(0)" class="resume_button btn-Cancel-New">Cancel</a> <span class="alert alert-danger displayNone error_h"></span> <span class="alert alert-success displayNone success_h"></span>
 			</div>
 		</div>
 		<br/>
