--- a/html/css/app.css
+++ b/html/css/app.css
@@ -555,7 +555,7 @@ margin-right: 100px;
 
 #comment_div {
 	text-align: right;
-    margin-right: 100px;
+    margin-right: 30px;
 }
 
 .comment-outer-h {
@@ -574,6 +574,14 @@ margin-right: 100px;
     width:100% !important;
     height: 100%;
     margin-top:30px !important;
+}
+
+.add-comment-form-h{
+    width: 100%;
+}
+
+.add-comment-form-h textarea{
+    padding:10px;
 }
 
 /**
