--- a/html/packages/site/templates/comment-form.html
+++ b/html/packages/site/templates/comment-form.html
@@ -4,9 +4,8 @@
 <form class="add-comment-form-h hide" method="post" action="#">
 <div class="row-fluid">
     <div class="field-message submit-result"></div>
-    <div class="user-photo"><img src="{{base_url}}{{user_picture}}" alt="{{name}}" />{{name}}</div>
-    <textarea cols="100" rows="5" id="new-comment" placeholder="{{comment_placeholder}}"></textarea>    
-    <input type="button" id="comment-submit" value="Submit"/>
+    <textarea style="width:85%;-webkit-border-radius: 15px; border-radius: 15px; height: 65px;" id="new-comment" placeholder="{{comment_placeholder}}" ></textarea>
+    <br/><input type="button" id="comment-submit" value="Submit"/>
 </div>
 </form>
 {{/payload}}
