--- a/html/pages/profilesetting/templates/basic_info_header.html
+++ b/html/pages/profilesetting/templates/basic_info_header.html
@@ -11,6 +11,6 @@
 	<p id="user_weight">
 		{{#weight_lb}}{{weight_lb}} LBS{{/weight_lb}}
 	</p>
-	<div id="edit_profile_info">Edit</div>
+	<div class="resume_button" id="edit_profile_info">Edit</div>
 </div>
 {{/payload}}
