--- a/html/pages/profilesetting/templates/basic_info_header_edit.html
+++ b/html/pages/profilesetting/templates/basic_info_header_edit.html
@@ -4,6 +4,6 @@
 			<div><span>Last Name: </span><input type="text" id="txt_user_last_name" model-property="lastname" value="{{last_name}}" /></div>
 			<div><span>Height (in):</span><input type="text" id="txt_user_height" model-property="height_in" value="{{height_in}}" /></div>
 			<div><span>Weight (lbs)</span><input type="text" id="txt_user_weight" model-property="weight_lb" value="{{weight_lb}}" /></div>
-			<a href="javascript:void(0);" class="common-btn common-btn-direction" id="save_user_data">Save</a>
+			<a href="javascript:void(0);" class="resume_button" id="save_user_data">Save</a>
 		</div>
 {{/payload}}
