--- a/html/pages/userresume/templates/listReferences.html
+++ b/html/pages/userresume/templates/listReferences.html
@@ -1,66 +1,28 @@
 
 {{#data}}
-	<div class="well section-rdtree-items_h">
-		<div class="row-fluid"><h3>{{sports_name}}</h3>
-		</div>
-		<!-- <div class="section-new-reference">
-		<div class="div-add-dotted well-small btn-Add-reference_h" sportId="{{sports_id}}">
-			+ Add an Reference
-		</div>
-		<div class="well section-new-controls displayNone">
-			<div class="clearfix row-fluid">
-				<span class="span2">Sports :</span>
-				<span class="span3"> <select class="ddl-sports-references_h"></select> </span>
-				<span class="span2">Name :</span>
-				<span class="span3">
-					<input type="text" class="txtReferences_h txt_name_h" value="{{name}}"/>
-				</span>
-			</div>
+<div class="section-rdtree-items_h inset-data-entry">
+	<div class="row-fluid awards-sports-header"><span class="standard-subsection-header">{{#icon}}<img src="{{icon}}" />{{/icon}}{{sports_name}}</span></div>
 
-			<div class="clearfix row-fluid">
-				<span class="span2">Description :</span>
-				<span class="span3">
-					<input type="text" class="txtReferences_h txt_description_h" value="{{description}}"/>
-				</span>
-				<span class="span2">Email Id :</span>
-				<span class="span3">
-					<input type="text" class="txtReferences_h txt_email_h" value="{{year}}"/>
-				</span>
-			</div>
-			<div class="clearfix row-fluid">
-				<span class="span2">Phone :</span>
-				<span class="span3">
-					<input type="text" class="txtReferences_h txt_phone_h" value="{{description}}"/>
-				</span>
-				<span class="span2">Relation :</span>
-				<span class="span3">
-					<input type="text" class="txtReferences_h txt_relation_h" value="{{year}}"/>
-				</span>
-			</div>
-			<div class="clearfix row-fluid">
-				<span class="span12"> <a href="javascript:void(0)" class="btn btn-primary btn-Save_reference_h" sportid="{{sports_id}}">Save</a> <a href="javascript:void(0)" class="btn btn-Cancel-New">Cancel</a> <span class="alert alert-danger displayNone error_h"></span> <span class="alert alert-success displayNone success_h"></span>
-			</div>
-		</div>
-		</div> -->
 		{{#references}}
-		<div class="section-new-reference">
+		<div class="section-new-reference"  style="background-color: #eeeeee; border-bottom: 1px solid #ccc; padding-bottom: 10px;">
 			<div class="row-fluid section-new-controls">
-				<span class="span3"><input type="text" class="txtReferences_h txt_name_h" value="{{name}}" disabled="disabled"/></span>
-				<span class="span3"><input type="text" class="txtReferences_h txt_relation_h" value="{{relation}}" disabled="disabled"/></span>
-				<span class="span3"><input type="text" class="txtReferences_h txt_phone_h" value="{{phone}}" disabled="disabled"/></span>
-				<span class="span3"><input type="text" class="txtReferences_h txt_email_h" value="{{email}}" disabled="disabled"/></span>
-				
-				<span class="span3"><input type="text" class="txtReferences_h txt_description_h" value="{{description}}" disabled="disabled"/></span>
-				<span class="span3">
-					<a href="javascript:void(0)" class="btn edit_reference_h">Edit</a>
-					<a href="javascript:void(0)" class="btn btn-primary btn-Update_reference_h displayNone" sportid="{{sports_id}}" referenceid="{{id}}">Save</a>
-					<a href="javascript:void(0)" class="btn btn-Cancel-Existing_reference_h displayNone">Cancel</a>
-					<a href="javascript:void(0)" class="btn btn-remove_reference_h" referenceid="{{id}}">Remove</a>
+
+				<span class=""><span class="award-labels">Reference Name:</span> <input type="text" class="txtReferences_h txt_name_h" value="{{name}}" disabled="disabled"/></span>
+				<span class=""><span class="award-labels">Relationship:</span> <input type="text" class="txtReferences_h txt_relation_h" value="{{relation}}" disabled="disabled"/></span>
+				<span class=""><span class="award-labels">Phone:</span> <input type="text" class="txtReferences_h txt_phone_h" value="{{phone}}" disabled="disabled"/></span>
+				<span class=""><span class="award-labels">Email:</span> <input type="text" class="txtReferences_h txt_email_h" value="{{email}}" disabled="disabled"/></span>
+				<span><textarea style="width:90%;" type="text" class="txtReferences_h txt_description_h" disabled="disabled">{{description}}</textarea></span>
+				<br />
+				<span class="">
+					<a href="javascript:void(0)" class="edit edit_reference_h"></a><a href="javascript:void(0)" class="remove btn-remove_reference_h" referenceid="{{id}}"></a>
+					<a href="javascript:void(0)" class="resume_button btn-Update_reference_h displayNone" sportid="{{sports_id}}" referenceid="{{id}}">Save</a>
+					<a href="javascript:void(0)" class="resume_button btn-Cancel-Existing_reference_h displayNone">Cancel</a>
+
 					<span class="alert alert-danger displayNone error_h"></span>
 					<span class="alert alert-success displayNone success_h"></span>
 					
 				</span>
-			</div>
+				</div>
 		</div>	
 		{{/references}}
 	</div>
