--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -1,7 +1,7 @@
 <div class="row-fluid">
 	<span class="green-left-heading">High School</span>
 </div>
-
+<div><a class="add-school-h" href="javascript: void(0);">Add a New School</a></div>
 <div id="btn-Add-School" class="clearfix div-add-dotted">
 	+ ADD SCHOOL
 </div>
