--- a/html/pages/profilesetting/templates/club.html
+++ b/html/pages/profilesetting/templates/club.html
@@ -1,7 +1,7 @@
 <div class="row-fluid">
 	<span class="green-left-heading">Clubs</span>
 </div>
-
+<div><a class="add-club-h" href="javascript: void(0);">Add a New Club</a></div>
 <div id="btn-Add-club" class="div-add-dotted">
 	+ Add a Club
 </div>
