--- a/html/css/app.css
+++ b/html/css/app.css
@@ -847,3 +847,19 @@ margin-right: 100px;
 .modal-body {
 	width: 100%;
 }
+
+
+
+/*********** TEMP ****************/
+
+div.game-info{
+    top:-80px;
+ /*   left:50%; */
+    width:400px;
+    height:45px;
+    background-color: white;
+    position: absolute;
+    float: left;
+    color:#333;
+    box-shadow:10px 10px 5px #333;
+}
