--- a/html/usercontrols/photo-player/templates/tag-item.html
+++ b/html/usercontrols/photo-player/templates/tag-item.html
@@ -1,21 +1,11 @@
-
 {{#payload}}
-<div class="row-fluid" data-id="bbbbbbbb">
-    <div class="user-photo">
-    	<img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" />
+<div class="row-fluid">
+    <div class="tags-name">
+		<span>{{media_obj.sports_obj.sport_name}}</span>
+		<span>{{subject.name}}</span>
     </div>
-    
-    <div>
-	    <div class="bubble">  
-		<div class="pointer"></div>
-	        <div class="content">
-	        	<span class="comment-date">{{poster}} {{comment_date}}</span>
-	        	<p class="comment-text">{{comment}}</p>
-	        </div>
-	    </div>
-	</div>
+    <div class="tags-number">
+    	27
+    </div>
 </div>
 {{/payload}}
-
-
-
