--- a/html/usercontrols/add-club/templates/layout.html
+++ b/html/usercontrols/add-club/templates/layout.html
@@ -13,7 +13,7 @@
 	<div class="address">
 		<label>Address</label>
 		<textarea placeholder="Address" max-length rows="3" class="address-h" cols="25"></textarea>
-		<span class="address-verified hide address-verified-status-h">Address Verified</span>
+		<span class="address-error hide address-error-status-h"></span>
 		<a href="javascript: void(0);" class="verify-address-h">VERIFY ADDRESS</a>		
 	</div>
 	
