--- a/html/pages/chrome/templates/header.html
+++ b/html/pages/chrome/templates/header.html
@@ -18,7 +18,7 @@
 
     <div class="account clearfix">
         {{#authorized}}
-            <div class="photo"><img src="{{base_url}}{{user_photo}}" alt="{{user_name}}"/></div>
+            <div class="photo"><img src="" alt="{{user_name}}"/></div>
             <div class="userlinks dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown">{{user_name}} <b class="caret"></b></a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
