--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -11,8 +11,8 @@
 			{{#shared.season}}<span>{{shared.season}}</span>{{/shared.season}}
 
 		</div>
-        <h3>{{game_day}}</h3>
-
+        <h3>{{game_day}} {{gameTime}}</h3>
+		<a href="javascript: void(0);" class="common-btn common-default-sky-dark pull-right">Edit Game</a>
     </div>
 
 	{{#game_picture}}
