--- a/html/usercontrols/photo-player/templates/tag-item.html
+++ b/html/usercontrols/photo-player/templates/tag-item.html
@@ -1,6 +1,6 @@
 <div class="row-fluid">
     <div class="tags-name">
-		<span><img src="{{_thumbnail}}" width="20" height="20" /></span>
+		<span><a href="{{_link}}"><img src="{{_thumbnail}}" width="20" height="20" /></a></span>
 		<span>{{{_label}}}</span>
     </div>
     <div class="tags-number">
