Addred create event functionality for individual sports

--- a/html/usercontrols/addgame/templates/layout.html
+++ b/html/usercontrols/addgame/templates/layout.html
@@ -14,7 +14,7 @@
 		<div class="row-fluid">
 			Select Sport:
 		</div>
-		<div class="row-fluid">
+		<div class="row-fluid section-game-sports_h">
 
 			<select class="ddl-game-sports_h"></select>
 			<span class="alert alert-danger displayNone field-message"></span>
@@ -47,11 +47,15 @@
 
 	<div class="secction-individual-game_h displayNone">
 		<input type="text"class="txt-individual-game_h" placeholder="Enter Game" />
+		<input type="text"class="txt-individual-location_h displayNone" placeholder="Enter Location Id"  />
 		<br/>
 		<span class="alert alert-warning displayNone field-message"></span>
 		<br/>
-		<button class="btn btn-primary btn-game-individual-Finish_h floatRight">
+		<button class="btn btn-primary btn-game-individual-Finish_h floatRight displayNone">
 			Go There !
+		</button>
+		<button class="btn btn-primary btn-game-individual-Create_h floatRight displayNone">
+			Create !
 		</button>
 	</div>
 
@@ -79,7 +83,7 @@
 		</div>
 	</div>
 
-	<div class="section-main-location_h">
+	<div class="section-main-location_h displayNone">
 		<h4>Location : </h4>
 		<span class="alert alert-danger displayNone field-message"></span>
 		<input type="text" class="txt-game-location-id_h displayNone" >
