create separate view for Team

--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -1,6 +1,8 @@
 <div class="template-container team-template-outer">
 <div id="main-header"></div>
 
+<div id="menu-container"></div>
+
 <div class="green-left-heading">MESSAGE BOARD</div>
 <div  class="clearfix clear commentson-outer-box-h profile-comment-list-box"></div>
 <div id="comment_div" class="clearfix"></div>
