--- a/html_build/pages/chrome/templates/header.html
+++ b/html_build/pages/chrome/templates/header.html
@@ -3,17 +3,17 @@
     <div class="logo">
     {{#branding}}
     <a class="brand" href="/#home">
-        <img src="{{base_url}}{{src}}" alt="{{alt}}" />
+        <img style="height: 30px;" src="{{base_url}}{{src}}" alt="{{alt}}" />
     </a>
     {{/branding}}
     </div>
 
-    <div class="searchform">
+    <div class="searchform"><!--
     {{#search}}
     <form action="/" method="post" class="form-inline">
         <input class="input-search" name="s" placeholder="{{placeholder}}"/>    
     </form>
-    {{/search}}
+    {{/search}}-->
     </div>
 
     <div class="account clearfix">
