--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -43,7 +43,7 @@
 			<li class="team-item">
 				<div class='score-box score-box-h {{#isWinner}}win{{/isWinner}}'>
 					<a href="javascript: void(0);" title="edit score" class="edit-score-h">
-						<span>{{points_scored}} 10</span>
+						<span>{{points_scored}}</span>
 					</a>
 					<input type="hidden" value="{{points_scored}}" data-id="{{id}}" class="edit-score-input-h input-mini" />
 				</div>
