--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -10,10 +10,18 @@
 			{{#shared.complevel}}<span>{{shared.complevel}}</span>{{/shared.complevel}}
 			{{#shared.season}}<span>{{shared.season}}</span>{{/shared.season}}
 		</div>
-        <h3>{{game_day}} {{gameTime}}</h3>
-		<a href="javascript: void(0);" class="common-btn common-default-sky-dark pull-right">Edit Game</a>
+        
+        	<h3>{{game_day}} {{gameTime}}</h3>
+        	<form action="#" class="update-date-time-h hide" name="update-date-time">
+        		
+        		<input type="text" class="date-time-h" value="{{gameDay}} {{gameTime}}" readonly="readonly" />
+        		<input type="submit" class="common-btn common-btn-validation" name="submit_edit-form" value="Update" />
+        		<a href="javascript: void(0);" class="common-btn common-btn-direction cancel-time-edit-h">Cancel</a>
+        	</form>
+      
+		<a href="javascript: void(0);" class="common-btn game-edit-btn-h common-default-sky-dark pull-right">Edit Game</a>
     </div>
-
+    
 	{{#game_picture}}
 		<a href="javascript: void(0);" class="header-image-container image-outer-h">
 			<div class="image-item-container">
@@ -31,12 +39,8 @@
 				
 			</div>
 		</a>
-		<!--div class="header-image-container image-outer-h">
-			<div class="image-item-container">
-				<img src="{{game_picture.types.standard_thumb.url}}" alt="{{game_name}}" />
-			</div>
-		</div-->
 	{{/game_picture}}
+	
 	<ul class="teams-list">
 		{{#teams}}
 			<li class="team-item">
