--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -12,6 +12,7 @@
 		</div>
         
         	<h3>{{game_day}} {{gameTime}}</h3>
+        	<p>{{game_location}}</p> <a href="javascript: void(0);" class="address-info-h">Info</a>
         	<form action="#" class="update-date-time-h hide" name="update-date-time">
         		
         		<input type="text" class="date-time-h" value="{{gameDay}} {{gameTime}}" readonly="readonly" />
