--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -14,6 +14,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-iphone4.png" />
     <link rel="stylesheet" href="/css/normalize.css">
 	<link rel="stylesheet" href="/css/fonts.css">
+	<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script>
     <script>
         var base_url = '{{base_url}}';
