--- a/html/packages/sportorg/templates/team-list.html
+++ b/html/packages/sportorg/templates/team-list.html
@@ -10,6 +10,6 @@
 {{/data}}
 {{^data}}
 <div class="info">	
-	No games on the docket.  <a href="#addgame" title="add game">Click here to Add Game.</a>
+	No games on the docket.  <a href="javascript: void(0);" title="add game" class="add-game-h">Click here to Add Game.</a>
 </div>
 {{/data}}
