--- a/html/usercontrols/addgame/templates/layout.html
+++ b/html/usercontrols/addgame/templates/layout.html
@@ -1,56 +1,64 @@
-<div class="well-large well span6">
-	<h4>Add Game</h4>
+<div class="container_add_game">
+	<!-- <h4>Add Game</h4> -->
+	<div class="green-left-heading ">DATE</div>
+<div class="clear"></div>
 	<div class="section-Add-Sports_h">
-		<div class="section-game-date_h">
+		<div class="section-game-date_h floatLeft">
 			<input type="text" class="txt-game-date_h" placeholder="Enter Date" readonly="readonly" />
+				<div class="clear"></div>
 			<!-- <input type="text" class="txt-game-time_h hasDatepicker"  placeholder="Enter Time" readonly="readonly"  /> -->
 			<!-- <select class="ddl-time-period_h">
 			<option value="AM">AM</option>
 			<option value="PM">PM</option>
 			</select>	 -->
-			<span class="alert alert-danger displayNone field-message"></span>
+			<span class="displayNone field-message field-message_h"></span>
 		</div>
-
-		<div class="row-fluid">
+		<div class="clear"></div>
+		<!-- <div class="row-fluid">
 			Select Sport:
-		</div>
+		</div> -->
+	<div class="green-left-heading">SPORT</div>
+	<div class="clear"></div>
 		<div class="row-fluid section-game-sports_h">
 
 			<select class="ddl-game-sports_h"></select>
-			<span class="alert alert-danger displayNone field-message"></span>
-			<br/>
+				<div class="clear"></div>
+			<span class="displayNone field-message field-message_h"></span>
 		</div>
-
+<div class="clear"></div>
 	</div>
+	<div class="clear"></div>
 	<div class="section-game-teams_h team-one_h displayNone">
-		Select Team 1 :
+		<div class="green-left-heading">TEAM 1</div>
+		<div class="clear"></div>
+		<!-- Select Team 1 : -->
+			<div class="clear"></div>
 		<select class="ddl-game-userteams_h"></select>
-
 		<a href="javascript:void(0)" class="btn-new-team-game_h">Team not listed ?</a>
 		<div class="section-new-team_h">
 			<!-- <input type="text" class="txt-game-state_h" placeholder="Enter State" />
 			<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" /> -->
-			<input type="text"class="txt-game-team_h displayNone" placeholder="Enter Team" />
+			<input type="text"class="txt txt-game-team_h displayNone" placeholder="Enter Team" />
 		</div>
+			<div class="clear"></div>
+		<span class="displayNone field-message field-message_h"></span>
+		<div class="clear"></div>
 		<div class="section-score_h">
-			Score :
-			<input type="text" class="txt-score-team_h" placeholder="Enter Score" />
+			Score : 
+			<input type="text" class="txt-score-team_h" />
 		</div>
-		<div class="section-game-radio_h">
-			<span class="alert alert-danger displayNone field-message"></span>
-			<input type="radio" name="rdo-team1_h" value="home" class="rdo-game-location_h rdo-game-location-one-home_h" team="one">
-			home &nbsp; &nbsp;
-			<input type="radio" name="rdo-team1_h" value="away" class="rdo-game-location_h" team="one">
-			away
+		<div class="section-game-radio_h">			
+			Home &nbsp;<input type="radio" name="rdo-team1_h" value="home" class="rdo-game-location_h rdo-game-location-one-home_h" team="one">
+			Away &nbsp;<input type="radio" name="rdo-team1_h" value="away" class="rdo-game-location_h" team="one">
 		</div>
 	</div>
-
+<div class="clear"></div>
 	<div class="secction-individual-game_h displayNone">
 		<input type="text"class="txt-individual-game_h" placeholder="Enter Game" />
 		<input type="text"class="txt-individual-location_h displayNone" placeholder="Enter Location Id"  />
-		<br/>
-		<span class="alert alert-warning displayNone field-message"></span>
-		<br/>
+			<div class="clear"></div>
+		<span class="displayNone field-message field-message_h"></span>
+			<div class="clear"></div>
 		<button class="btn btn-primary btn-game-individual-Finish_h floatRight displayNone">
 			Go There !
 		</button>
@@ -60,37 +68,42 @@
 	</div>
 
 	<div class="section-game-teams_h team-two_h displayNone">
-		Select Team 2 :
+		<div class="green-left-heading">TEAM 2</div>
+		<div class="clear"></div>
+		<!-- Select Team 2 : -->
+			<div class="clear"></div>
 		<select class="ddl-game-userteams_h"></select>
-
 		<a href="javascript:void(0)" class="btn-new-team-game_h">Team not listed ?</a>
 		<div class="section-new-team_h">
 			<!-- <input type="text" class="txt-game-state_h" placeholder="Enter State" />
 			<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" /> -->
 			<input type="text"class="txt-game-team_h displayNone" placeholder="Enter Team" />
 		</div>
+			<div class="clear"></div>
+		<span class="displayNone field-message field-message_h"></span>
+		<div class="clear"></div>
 		<div class="section-score_h">
 			Score :
-			<input type="text" class="txt-score-team_h" placeholder="Enter Score" />
+			<input type="text" class="txt-score-team_h"/>
 		</div>
 		<div class="section-game-radio_h">
-			<span class="alert alert-danger displayNone field-message"></span>
-			<input type="radio" name="rdo-team2_h" value="home" class="rdo-game-location_h rdo-game-location-two-home_h"  team="two">
-			
-			home &nbsp; &nbsp;
-			<input type="radio" name="rdo-team2_h" value="away" class="rdo-game-location_h"   team="two">
-			away
+			Home &nbsp;<input type="radio" name="rdo-team2_h" value="home" class="rdo-game-location_h rdo-game-location-two-home_h"  team="two">
+			Away  &nbsp;<input type="radio" name="rdo-team2_h" value="away" class="rdo-game-location_h"   team="two">			
 		</div>
 	</div>
-
+<div class="clear"></div>
 	<div class="section-main-location_h displayNone">
-		<h4>Location : </h4>
-		<span class="alert alert-danger displayNone field-message"></span>
+		<div class="green-left-heading">LOCATION</div>
+		<div class="clear"></div>
+		<!-- <strong>Location : </strong>		 -->
+<div class="clear"></div>
 		<input type="text" class="txt-game-location-id_h displayNone" >
 		<div class="div-game-location_h">
-
 		</div>
+			<div class="clear"></div>
+		<span class="displayNone field-message field-message_h"></span>
 	</div>
+	<div class="clear"></div>
 	<button class="btn btn-primary btn-game-Finish_h floatRight displayNone">
 		Create
 	</button>
