--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -3,12 +3,24 @@
 	<img src="{{_thumbnail}}" alt=""/>
 		<div class="action-section">
 			{{#show_edit}}
-				<div class="action-block left-block edit" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>E</span></div>
-				<div class="action-block right-block delete" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>D</span></div>
+				<div class="action-block left-block edit">
+					<a href="javascript: void(0);" title="Edit" class="edit-h" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}">
+						<span>E</span>
+					</a>
+				</div>
+				<div class="action-block right-block delete">
+					<a href="javascript: void(0);" title="delete" class="delete-h" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}">					
+						<span>D</span>
+					</a>
+				</div>
 			{{/show_edit}}
 			{{^show_edit}}
-				<div class="action-block left-block vote" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>V</span></div>
-				<div class="action-block right-block follow" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>F</span></div>
+				<div class="action-block left-block vote">
+					<a href="javascript: void(0);" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}" class="vote-h" title="vote"><span>V</span></a>
+				</div>
+				<div class="action-block right-block follow">
+				  <a href="javascript: void(0);" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}" class="follow-h" title="vote"><span>F</span></a>
+				</div>
 			{{/show_edit}}
 		</div>
 		<div class="detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
