--- a/html/css/app.css
+++ b/html/css/app.css
@@ -886,6 +886,6 @@ div.game-info{
 
 
 .link-disabled {
-	opacity: 0.5;
-	pointer-events: none;
+	opacity: 0.5 !important;
+	pointer-events: none !important;
 }
