--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -53,7 +53,7 @@
 				</div>
 				<div class="org-info">
 					<span class="org-name">
-						{{org_sport_link_obj.org.org_name}}
+						{{org_sport_link_obj.org.org_name}}, {{complevels_obj.complevel_name}}, {{seasons_obj.season_name}} {{year}}
 					</span>
 					<span class="org-location">
 						{{team_location}}
