Added Go There Functionality For Individual Sport

--- a/html/usercontrols/addgame/templates/layout.html
+++ b/html/usercontrols/addgame/templates/layout.html
@@ -39,6 +39,7 @@
 			<!-- <input type="text" class="txt-game-state_h" placeholder="Enter State" />
 			<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" /> -->
 			<input type="text"class="txt txt-game-team_h displayNone" placeholder="Enter Team" />
+			<!-- <a href="javascript:void(0)" class="btn-ddl-team-game_h">Choose from select ?</a> -->
 		</div>
 			<div class="clear"></div>
 		<span class="displayNone field-message field-message_h"></span>
@@ -55,6 +56,7 @@
 <div class="clear"></div>
 	<div class="secction-individual-game_h displayNone">
 		<input type="text"class="txt-individual-game_h" placeholder="Enter Game" />
+		<div class="clear"></div>
 		<input type="text"class="txt-individual-location_h displayNone" placeholder="Enter Location Id"  />
 			<div class="clear"></div>
 		<span class="displayNone field-message field-message_h"></span>
