some misc changes

--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -3,8 +3,8 @@
 	
 	<div class="profile-heading">
 		<div class="sports-h"></div>
-            <h3 class="username">{{name}} '{{grad_year}}</h3>
-            <h4>Position</h4>
+            <h3 class="username">{{name}} {{#grad_year}}'{{grad_year}}{{/grad_year}}</h3>
+            <h4>&nbsp;</h4>
 
     </div>
 	
