New build proc aims to fix some issues with dependency loading.

--- a/html_build/pages/home/home.css
+++ b/html_build/pages/home/home.css
@@ -30,14 +30,14 @@
 	position: absolute;
 	content: "";
 }
-.select {
+.select, .select a {
 	background-color: #0081C2;
     background-image: linear-gradient(to bottom, #0088CC, #0077B3);
     background-repeat: repeat-x;
     color: #FFFFFF;
     text-decoration: none;
 }
-li.sport:hover {
+li.sport:hover, li.sport a:hover {
 	background-color: #0081C2;
     background-image: linear-gradient(to bottom, #0088CC, #0077B3);
     background-repeat: repeat-x;
@@ -59,4 +59,15 @@ img.tiny-sport-icon{
     max-width: 20px;
     max-height: 20px;
     margin-right:4px;
+}
+li.sport a {
+	display: inline-block;
+	width: 100%;
+float: left;
+}
+li.sport.select a {
+	color: #FFF;
+}
+li.sport a:hover {
+	color: #FFF;
 }
