--- a/html_build/packages/sport/templates/sport-item.html
+++ b/html_build/packages/sport/templates/sport-item.html
@@ -1,3 +1,4 @@
 {{#payload}}
-<img src="{{small_icon}}" class="tiny-sport-icon"/>{{sport_name}}
+<a href="javascript: void(0);">
+<img src="{{small_icon}}" class="tiny-sport-icon"/>{{sport_name}}</a>
 {{/payload}}
