--- a/html_build/pages/game/templates/header.html
+++ b/html_build/pages/game/templates/header.html
@@ -9,39 +9,60 @@
 			{{#shared.sport}}<span>{{shared.sport}}</span>{{/shared.sport}}
 			{{#shared.complevel}}<span>{{shared.complevel}}</span>{{/shared.complevel}}
 			{{#shared.season}}<span>{{shared.season}}</span>{{/shared.season}}
-
 		</div>
-        <h3>{{game_day}} {{gameTime}}</h3>
-		<a href="javascript: void(0);" class="common-btn common-default-sky-dark pull-right">Edit Game</a>
+        
+        	<h3>{{game_day}} {{gameTime}}</h3>
+        	<p>{{game_location}}</p> <a href="javascript: void(0);" class="address-info-h">Info</a>
+        	<form action="#" class="update-date-time-h hide" name="update-date-time">
+        		
+        		<input type="text" class="date-time-h" value="{{gameDay}} {{gameTime}}" readonly="readonly" />
+        		<input type="submit" class="common-btn common-btn-validation" name="submit_edit-form" value="Update" />
+        		<a href="javascript: void(0);" class="common-btn common-btn-direction cancel-time-edit-h">Cancel</a>
+        	</form>
+      
+		<a href="javascript: void(0);" class="common-btn game-edit-btn-h common-default-sky-dark pull-right">Edit Game</a>
     </div>
-
+    
 	{{#game_picture}}
-		<div class="header-image-container image-outer-h">
+		<a href="javascript: void(0);" class="header-image-container image-outer-h">
 			<div class="image-item-container">
-				<img src="{{game_picture.types.standard_thumb.url}}" alt="{{game_name}}" />
+			<img src="{{game_picture.types.standard_thumb.url}}" alt="{{game_name}}" />
+				<div class="action-section">
+					{{#game_picture.is_owner}}
+						<div class="action-block left-block edit object-edit-h" subject-type-id="{{enttypes_id}}" subject-id="{{id}}"><span>E</span></div>
+						<div class="action-block right-block delete object-delete-h" subject-type-id="{{enttypes_id}}" subject-id="{{id}}"><span>D</span></div>
+					{{/game_picture.is_owner}}
+					{{^game_picture.is_owner}}
+						<div class="action-block left-block vote" subject-type-id="{{enttypes_id}}" subject-id="{{id}}"><span>V</span></div>
+						<div class="action-block right-block follow" subject-type-id="{{enttypes_id}}" subject-id="{{id}}"><span>F</span></div>
+					{{/game_picture.is_owner}}
+				</div>
+				
 			</div>
-		</div>
+		</a>
 	{{/game_picture}}
-
+	
 	<ul class="teams-list">
 		{{#teams}}
-		<li class="team-item">
-			<div class='score-box {{#isWinner}}win{{/isWinner}}'>
-				<span>{{points_scored}}</span>
-			</div>
-			<div class="org-info">
-				<span class="org-name">
-					{{org_sport_link_obj.org.org_name}}
-				</span>
-				<span class="org-location">
-					{{team_location}}
-				</span>
-			</div>
-		</li>
+			<li class="team-item">
+				<div class='score-box score-box-h {{#isWinner}}win{{/isWinner}}'>
+					<a href="javascript: void(0);" title="edit score" class="edit-score-h">
+						<span>{{points_scored}}</span>
+					</a>
+					<input type="hidden" value="{{points_scored}}" data-id="{{id}}" class="edit-score-input-h input-mini" />
+				</div>
+				<div class="org-info">
+					<span class="org-name">
+						{{org_sport_link_obj.org.org_name}}
+					</span>
+					<span class="org-location">
+						{{team_location}}
+					</span>
+				</div>
+			</li>
 		{{/teams}}
 	</ul>
-
-
+	<div id="votes-area-h"></div>
 </div>
 
 {{/payload}}
