--- a/html_build/pages/videopreview/templates/upload.html
+++ b/html_build/pages/videopreview/templates/upload.html
@@ -23,20 +23,54 @@
 		<input type="text" id="title" name="title" style="width:95%" placeholder="Enter a Title"/>
 		<label style="margin-bottom: 2px;">Sport</label>
 		<select name="sports_id" id="sports_id" style="width:95%;" class="">
-			<option value="46">Baseball</option>
-			<option value="47">Basketball</option>	
-			<option value="48">Cross Country</option>
-			<option value="49">Football</option>
-			<option value="50">Rugby</option>	
-			<option value="51">Golf</option>
-			<option value="52">Hockey</option>
-			<option value="53">Lacrosse</option>
-			<option value="54">Soccer</option>	
-			<option value="55">Swimming</option>
-			<option value="56">Tennis</option>
-
-									<option value="57">Track and Field</option>				<option value="58">Volleyball</option>				<option value="59">Water Polo</option>				<option value="60">Wrestling</option>				<option value="61">Crew</option>					<option value="62">Basketball</option>				<option value="63">Cross Country</option>			<option value="64">Cheerleading</option>			<option value="65">Golf</option>					<option value="66">Hockey</option>					<option value="67">Lacrosse</option>				<option value="68">Softball</option>				<option value="69">Soccer</option>					<option value="70">Swimming</option>				<option value="71">Rifle</option>					<option value="72">Tennis</option>					<option value="73">Track and Field</option>			<option value="74">Volleyball</option>				<option value="75">Water Polo</option>				<option value="76">Field Hockey</option>			<option value="77">Crew</option>					<option value="78">Gymnastics</option>				<option value="79">Rifle</option>					<option value="80">Skiing</option>					<option value="81">Diving</option>					<option value="82">Indoor Track</option>			<option value="83">Fencing</option>					<option value="84">Fencing</option>					<option value="85">Gymnastics</option>				<option value="86">Skiing</option>					<option value="87">Indoor Track</option>			<option value="88">Diving</option>					<option value="89">Squash</option>					<option value="90">Squash</option>					<option value="91">Marathon</option>				<option value="92">Triathalon</option></select>
-		
+			<option value="1">Baseball</option>
+			<option value="2">Basketball</option>
+			<option value="3">Cross Country</option>
+			<option value="6">Football</option>
+			<option value="7">Rugby</option>
+			<option value="8">Golf</option>
+			<option value="9">Hockey</option>
+			<option value="10">Lacrosse</option>
+			<option value="11">Soccer</option>
+			<option value="12">Swimming</option>
+			<option value="14">Tennis</option>
+			<option value="15">Track and Field</option>
+			<option value="16">Volleyball</option>
+			<option value="17">Water Polo</option>
+			<option value="18">Wrestling</option>
+			<option value="19">Crew</option>
+			<option value="20">Basketball</option>
+			<option value="21">Cross Country</option>
+			<option value="22">Cheerleading</option>
+			<option value="23">Golf</option>
+			<option value="24">Hockey</option>
+			<option value="25">Lacrosse</option>
+			<option value="26">Softball</option>
+			<option value="27">Soccer</option>
+			<option value="28">Swimming</option>
+			<option value="30">Tennis</option>
+			<option value="31">Track and Field</option>
+			<option value="32">Volleyball</option>
+			<option value="33">Water Polo</option>
+			<option value="34">Field Hockey</option>
+			<option value="35">Crew</option>
+			<option value="36">Gymnastics</option>
+			<option value="37">Rifle</option>
+			<option value="38">Skiing</option>
+			<option value="39">Diving</option>
+			<option value="40">Indoor Track</option>
+			<option value="41">Fencing</option>
+			<option value="42">Fencing</option>
+			<option value="43">Gymnastics</option>
+			<option value="44">Rifle</option>
+			<option value="45">Skiing</option>
+			<option value="46">Indoor Track</option>
+			<option value="47">Diving</option>
+			<option value="48">Squash</option>
+			<option value="49">Squash</option>
+			<option value="50">Marathon</option>
+			<option value="51">Triathalon</option>
+		</select>
 		<div id="uploadfiles" class="qq-upload-button" style="width:70px;">Upload</div>
 
 	</div>
