Working on photo player look

--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -1,11 +1,16 @@
 .photo-frame-model {
-    width: 970px !important;
-    margin-left: -486px !important;
-    top: 5% !important;
+    width: 90% !important;
+    height:80%;
+    top: 10% !important;
+    left:5% !important;
+    margin: 0 !important;
+    border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0;
 }
 
 .photo-frame-model .modal-body {
-    max-height: 540px !important;
+    height: 100%;
+    max-height: 100% !important;
+    padding: 0 !important;
 }
 
 
@@ -28,6 +33,10 @@
 .photo-player {
     float: left;
     width: 70%;
+    height: 100%;
+}
+.photo-player > div{
+    height: 100%;
 }
 
 .photo-player-right-area {
@@ -73,11 +82,32 @@
 
 .image-bg {
     text-align: center;
-    background: #000;
+    background: #333;
+    height:100%;
+    position: relative;
 }
 
 .photo-player-next {
     margin-right: 20px;
+}
+
+div.image-controls{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1055;
+}
+
+div.right-arrow{
+    width:50px;
+    height: 50px;
+    background: url('http://cdn.athletez.com/resources/img/right_arrow.png');
+}
+
+div.left-arrow{
+    width:50px;
+    height: 50px;
+    background: url('http://cdn.athletez.com/resources/img/left_arrow.png')
 }
 
 .photo-player-back {
@@ -91,11 +121,15 @@
 }
 
 .thumbs-outer {
+    z-index: 1056;
     max-width: 100%;
-    width: 100%;
+
     margin-top: 5px;
     max-height: 150px;
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    position: absolute;
+    bottom:0px;
 }
 
 .thumbs-inner {
@@ -139,6 +173,7 @@
 
 .photo-player-main-image {
     min-height: 380px;
+    position: relative;
 }
 
 .tags-name {
@@ -148,6 +183,11 @@
 
 .tags-name > span {
 	float: left;
+}
+
+.tags-name > span > a img {
+    height: 60px;
+    width: 60px;
 }
 
 .tags-number {
