--- a/html_build/usercontrols/photo-player/templates/player.html
+++ b/html_build/usercontrols/photo-player/templates/player.html
@@ -1,17 +1,21 @@
 <div class="image-bg">
-	<ul class="image-actions">
-		<li><a href="javascript: void(0);" class="photo-player-tag-photo-h" title="tag photo">Tag Photo</a></li>
-		<li><a href="javascript: void(0);" class="photo-player-vote-h" title="vote">Vote</a></li>
-	</ul>
-	
-	<a href="javascript: void(0);" class="photo-player-back pull-left player-move-options back-arrow-h">&lt;</a>
-	<a href="javascript: void(0);" class="photo-player-next pull-right player-move-options next-arrow-h">&gt;</a>
+	<div class="image-controls">
+		<ul class="image-actions">
+			<li><a href="javascript: void(0);" class="photo-player-tag-photo-h" title="tag photo">Tag Photo</a></li>
+			<li><a href="javascript: void(0);" class="photo-player-vote-h" title="vote">Vote</a></li>
+		</ul>
+
+		<div class="left-arrow photo-player-back pull-left player-move-options back-arrow-h"></div>
+		<div class="right-arrow photo-player-next pull-right player-move-options next-arrow-h"></div>
+	</div>
+
 	<img src="" class="photo-player-main-image large-image-h" />
-	
+
 	<div class="thumbs-outer">
 		<div class="thumbs-inner">
-			<ul class="images-list thumb-image-list-h"></ul>	
+			<ul class="images-list thumb-image-list-h"></ul>
 		</div>
-	</div>	
+	</div>
+
 </div>
 
