--- a/html_build/usercontrols/photo-player/templates/tag-item.html
+++ b/html_build/usercontrols/photo-player/templates/tag-item.html
@@ -1,7 +1,7 @@
 <div class="row-fluid">
     <div class="tags-name">
-		<span><a href="{{_link}}"><img src="{{_thumbnail}}" width="20" height="20" /></a></span>
-		<span>{{{_label}}}</span>
+		<span><a href="{{_link}}"><img src="{{_thumbnail}}" width="20" height="20" /><span>{{{_label}}}</span></a></span>
+
     </div>
     <div class="tags-number">
     	{{count}}
