still styling image player

--- a/html/usercontrols/photo-player/templates/player.html
+++ b/html/usercontrols/photo-player/templates/player.html
@@ -5,11 +5,11 @@
 			<li><a href="javascript: void(0);" class="photo-player-vote-h" title="vote">Vote</a></li>
 		</ul>
 
-		<div class="left-arrow photo-player-back pull-left player-move-options back-arrow-h"></div>
-		<div class="right-arrow photo-player-next pull-right player-move-options next-arrow-h"></div>
+		<div class="left-arrow-container left-arrow photo-player-back pull-left back-arrow-h"><img src="http://cdn.athletez.com/resources/img/left_arrow.png" /></div>
+		<div class="right-arrow-container right-arrow photo-player-next pull-right next-arrow-h"><img src="http://cdn.athletez.com/resources/img/right_arrow.png" /></div>
 	</div>
 
-	<img src="" class="photo-player-main-image large-image-h" />
+	<div class="loading_image"><img src="" class="photo-player-main-image large-image-h" /></div>
 
 	<div class="thumbs-outer">
 		<div class="thumbs-inner">
