--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -1,6 +1,6 @@
 <a href="{{_link}}" data-index="{{index}}" class="image-outer-h">
 	<div class="image-item-container">
-	<img src="{{_thumbnail}}" alt=""/>
+	<img class="list-thumbnail" src="{{_thumbnail}}" alt=""/>
 		<div class="action-section">
 			{{#show_edit}}
 				<div class="action-block left-block edit edit-h" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>E</span></div>
@@ -9,8 +9,10 @@
 			{{^show_edit}}
 				<div class="action-block left-block vote vote-h {{#_has_voted}} link-disabled {{/_has_voted}}" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}">
 					<span>V</span>
-					</div>
+				</div>
+				{{#_can_follow}}
 				<div class="action-block right-block follow follow-h {{#_is_following}} link-disabled {{/_is_following}}" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}"><span>F</span></div>
+				{{/_can_follow}}
 			{{/show_edit}}
 		</div>
 		<div class="detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
