--- a/html/pages/chrome/templates/header.html
+++ b/html/pages/chrome/templates/header.html
@@ -2,7 +2,7 @@
 <div class="row-fluid">
     <div class="logo">
     {{#branding}}
-    <a class="brand" href="/#home">
+    <a class="brand" href="/">
         <img style="height: 30px;" src="{{base_url}}{{src}}" alt="{{alt}}" />
     </a>
     {{/branding}}
