--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -17,8 +17,8 @@
 		    </div>
 		    
 		    <div class="span6">
-			    	<div class="school-name">ORG NAME</div>
-			    	<div class="city">LOCATION</div>
+			    	<!--<div class="school-name">ORG NAME</div>
+			    	<div class="city">LOCATION</div>-->
 			    	<div class="teams">
 			    		 <div id="sports-info"></div>
 			    	</div>
