--- a/html/pages/imageup/imageup.css
+++ b/html/pages/imageup/imageup.css
@@ -68,6 +68,16 @@
     display:inline-block;
 }
 
+
+
+
+#imgUploadModal .main-body {
+    max-height: 500px !important;
+    height: 500px;
+    width: 70%;
+    float: right;
+    display:inline-block;
+}
 #main-content-img {
     width: 100%;
     float: left;
@@ -100,4 +110,7 @@
 
 #imgUploadModal {
     height: 700px;
+}
+#Loginview {
+	height: 700px;
 }
