--- a/html/packages/sportorg/templates/org-item.html
+++ b/html/packages/sportorg/templates/org-item.html
@@ -1,11 +1,15 @@
 {{#payload}}
-<div class="org-name">
-	{{org_name}}
-</div>
+
 
 <div class="select-team">
 	
 			{{#teams}}
+			
+		<div class="org-name">
+	{{org_name}} | {{complevel}} | {{season}} {{year}}
+</div>	
+			
+			
 			<div class="game-box-outer">
 		<ul>
 			
