--- a/html/css/app.css
+++ b/html/css/app.css
@@ -748,7 +748,7 @@ margin-right: 100px;
 .game-box-outer ul {
     background: #bbbbbc;
     border-radius:5px;
-    height: 8px;
+    /*height: 8px;*/
 }
 
 .game-box-outer li {
@@ -756,7 +756,7 @@ margin-right: 100px;
     display: inline-block;
     margin-left:20px;
     border-radius: 0;
-    top:-5px;
+    top:0px;
 }
 
 
