--- a/html/packages/media/templates/image-list.html
+++ b/html/packages/media/templates/image-list.html
@@ -1,2 +1,4 @@
-<ul class="image-list"></ul>
+<ul class="image-list">
+	<li>No Record Found.</li>
+</ul>
 <div class="clear"><a href="javascript: void(0);" class="see-more-h">See more</a></div>
