--- a/html/packages/sportorg/templates/org-item.html
+++ b/html/packages/sportorg/templates/org-item.html
@@ -6,8 +6,14 @@
 			{{#teams}}
 			
 		<div class="org-name">
-	{{org_name}} | {{complevel}} | {{season}} {{year}}
+	{{org_name}} | {{complevel}} | {{season}} {{year}} {{^schedules}}
+				<div class="info">	
+	No games on the docket.  <a href="javascript: void(0);" title="add game" class="add-game-h"> - Click here to Add Game.</a>
+</div>
+				{{/schedules}}
 </div>	
+
+
 			
 			
 			<div class="game-box-outer">
@@ -27,6 +33,7 @@
 				</a>
 				</li>
 				{{/schedules}}
+				
 			
 			</ul>
 	</div>
