--- a/html/packages/sportorg/templates/org-item.html
+++ b/html/packages/sportorg/templates/org-item.html
@@ -8,7 +8,7 @@
 		<div class="org-name">
 	{{org_name}} | {{complevel}} | {{season}} {{year}} {{^schedules}}
 				<div class="info">	
-	No games on the docket.  <a href="javascript: void(0);" title="add game" class="add-game-h"> - Click here to Add Game.</a>
+	No games on the docket.  <a href="javascript: void(0);" data-id="{{team_id}}" title="add game" class="add-game-h"> - Click here to Add Game.</a>
 </div>
 				{{/schedules}}
 </div>	
