--- a/html/pages/registration/registration.css
+++ b/html/pages/registration/registration.css
@@ -18,3 +18,8 @@
 }
 /* .fbimagecontainer img { display:none; } */
 .fbimagecontainer jrac_viewport img {display:block}
+
+#main-content-reg #main-content{
+    width:90%;
+    margin-left: 5%;
+}
