--- a/html_build/packages/media/templates/image-list.html
+++ b/html_build/packages/media/templates/image-list.html
@@ -1,2 +1,3 @@
-<ul class="image-list"></ul>
+<ul class="image-list">
+</ul>
 <div class="clear"><a href="javascript: void(0);" class="see-more-h">See more</a></div>
