--- a/html_build/packages/media/templates/image-item.html
+++ b/html_build/packages/media/templates/image-item.html
@@ -1,4 +1,4 @@
-<a href="{{_link}}" data-index="{{index}}" class="image-outer-h">
+<a href="{{_link}}" data-index="{{index}}" class="image-outer-h {{^_has_link}}open-photo-player-h{{/_has_link}}">
 	<div class="image-item-container">
 	<img class="list-thumbnail" src="{{_thumbnail}}" alt=""/>
 		<div class="action-section">
