--- a/html_build/pages/chrome/templates/header.html
+++ b/html_build/pages/chrome/templates/header.html
@@ -30,7 +30,7 @@
             </div>
         {{/authorized}}    
         {{^authorized}}
-            <a href="{{login_url}}">{{login_label}}</a>
+            <a href="{{login_url}}" id="userlogin">{{login_label}}</a>
         {{/authorized}}    
     </div>
 </div>
