--- a/html_build/pages/imageup/imageup.css
+++ b/html_build/pages/imageup/imageup.css
@@ -55,6 +55,13 @@
     float: right;
     display:inline-block;
 }
+#imgUploadModal .main-body {
+    max-height: 500px !important;
+    height: 500px;
+    width: 70%;
+    float: right;
+    display:inline-block;
+}
 #main-content-img {
     width: 100%;
     float: left;
@@ -82,4 +89,13 @@
 }
 #imgUploadModal {
     height: 700px;
+}
+#Loginview {
+	height: 700px;
+}
+#RegModal{
+height: 700px;
+}
+.errormsg{
+color: red;
 }
