--- a/html_build/pages/registration/registration.css
+++ b/html_build/pages/registration/registration.css
@@ -15,3 +15,7 @@
     clear:both;
 }
 .fbimagecontainer jrac_viewport img {display:block}
+#main-content-reg #main-content{
+    width:90%;
+    margin-left: 5%;
+}
