--- a/html_build/pages/signup/templates/layout.html
+++ b/html_build/pages/signup/templates/layout.html
@@ -12,7 +12,7 @@
 <div id="main-footer">
 
 </div>-->
-<div id="imgUploadModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="RegModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
